# aiops-training

./: .gitignore  AI ops客户沟通记录整理.docx  README.md  README_PROJECT.md  customer.md  customer_interview_outline.md  customer_survey_questionnaire.md  training_proposal_template.md  traning_plan.md
Labs/: COURSE_OVERVIEW.md  EXPERIMENT_OBJECTIVES.md  LEARNING_GUIDE.md  README.md  README_ALL_LABS.md
Labs/docs/: INDEX.md
Labs/lab1_3sigma_anomaly_detection/: Makefile  README.md  generate_data.py  lab1_3sigma_anomaly_detection.md  main.py  pyproject.toml  requirements.txt
Labs/lab2_isolation_forest/: .gitignore  MLFLOW_INTEGRATION_SUMMARY.md  MLFLOW_QUICKSTART.md  Makefile  README.md  docker-compose.yml  experiment_comparison.py  generate_data.py  init-db.sql  load_model_from_mlflow.py  main.py  mlflow_config.py  pyproject.toml  requirements.txt
Labs/lab3_lstm_autoencoder/: Makefile  README.md  generate_data.py  install_uv.sh  model.py  predict.py  pyproject.toml  requirements.txt  train.py  utils.py
Labs/lab4_prophet_forecast/: DEVELOPMENT_SUMMARY.md  Makefile  README.md  generate_data.py  lab_guide.md  main.py  pyproject.toml  requirements.txt
Labs/lab6_rag_knowledge_qa/: Makefile  README.md  generate_data.py  lab_guide.md  main.py  main_simple.py  pyproject.toml  (+1 more)
Labs/lab7_llm_agent_ops/: ALIYUN_BAILIAN_USAGE.md  BAILIAN_INTEGRATION_SUMMARY.md  CHANGELOG_CLOUD_MODEL.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  SUMMARY.md  UPGRADE_TO_CLOUD_MODEL.md  constants.py  generate_data.py  lab_guide.md  logger.py  main.py  main_bailian.py  main_optimized.py  performance.py  plugins.py  pyproject.toml  report_generator.py  repositories.py  requirements-optimized.txt  requirements.txt  rule_engine.py  services.py  test_bailian.py  test_optimized.py  types.py
Labs/lab7_llm_agent_ops/alert_data/: alerts.json  scenarios.json
Labs/lab7_llm_agent_ops/plugins/: aliyun_bailian_plugin.py
Labs/lab7_llm_agent_ops/runbook_templates/: RB-CPU-HIGH.json  RB-DB-CONNECTION.json  RB-DISK-FULL.json  RB-MEMORY-LEAK.json  index.json
(+9 files in other folders)
